plugins {
    id 'java'
}

group 'com.variantcaller.politech'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    implementation 'commons-cli:commons-cli:1.4'
    testCompile("org.junit.jupiter:junit-jupiter-api:5.4.1")
    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.4.1")
    implementation 'org.apache.commons:commons-lang3:3.9'
}

test {
    useJUnitPlatform()
}
